<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_properties"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/nav_properties" />
    <item
        android:id="@+id/nav_tenants"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_tenants" />
    <item
        android:id="@+id/nav_payments"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_payments" />
    <item
        android:id="@+id/nav_more"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/nav_more" />
</menu>
